# taxtool

./: .gitignore  README.md  pyproject.toml
app/: main.py  pdf_service.py  storage.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: windows-test-setup-guide.md
docs/plans/: 2026-06-09-mvp.md
tests/: test_app.py  test_pdf_service.py  test_storage.py
